--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/*Stiliziranje div eemenata*/
+/*Stiliziranje div elemenata*/
 div{
   border: 4px solid whitesmoke;
   border-radius: 5px;
